# mcuhttp

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt  mcuhttp.c  mcuhttp.h  mcuhttp.py  mcusock.c  mcusock.h  mcussl.c  mcussl.h
tests/: gen_cert.sh  index.html  server.crt  server.csr  server.key  server.key.org  test-certs.h  test-resources.h  tests.c
